@@ -1,5 +1,10 @@
 2008-07-07  Mike Krüger <mkrueger@novell.com> 
 
+	* Gui/NRefactoryResolver.cs, Gui/CSharpTextEditorCompletion.cs,
+	  Parser/DomParser.cs, Parser/mcs/dom.cs: Worked on completion.
+
+2008-07-07  Mike Krüger <mkrueger@novell.com> 
+
 	* Gui/NRefactoryResolver.cs, Gui/ResolveVisitor.cs,
 	  Gui/CSharpTextEditorCompletion.cs: Worked on code completion.
 
